# shadermake

./: .gitignore  Cargo.toml
example/: compute.glsl  fragment.glsl  shadermake.toml
example/subdir/: shadermake.toml  subdir.glsl  wgsl-shader.wgsl
src/: lib.rs  main.rs  manifest.rs
