[package]
name = "shadermake"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[[bin]]
name = "shadermake"
path = "src/main.rs"

[lib]
name = "shadermake"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
anyhow = "1"
colored = "2"
argh = "0.1"
rayon = "1"
bytemuck = { version = "1" }
pathdiff = "0.2"

shaderc = "0.7"
naga = { git = "https://github.com/gfx-rs/naga", features = ["glsl-out", "spv-out", "glsl-in", "wgsl-in"] }
